force-app/main/default/objects/Deployment__c/fields/DestinationEnvironment__c.field-meta.xml
<CustomField>
    <fullName>DestinationEnvironment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The environment to which the deployment is destined.</description>
    <inlineHelpText>The environment to which the deployment is destined.</inlineHelpText>
    <label>Destination Environment</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>Deployments (Destination)</relationshipLabel>
    <relationshipName>Deployments_Destination</relationshipName>
    <type>Lookup</type>
</CustomField>