force-app/main/default/objects/Deployment__c/fields/PostDeploymentSteps__c.field-meta.xml
<CustomField>
    <fullName>PostDeploymentSteps__c</fullName>
    <description>Let&#39;s make this a rich-text field first.  The fact that these need to be ordered will make them fun.</description>
    <inlineHelpText>Let&#39;s make this a rich-text field first.  The fact that these need to be ordered will make them fun.</inlineHelpText>
    <label>Post-deployment Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>