force-app/main/default/objects/Deployment__c/fields/SourceEnvironment__c.field-meta.xml
<CustomField>
    <fullName>SourceEnvironment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The environment from which the deployment originates.</description>
    <inlineHelpText>The environment from which the deployment originates.</inlineHelpText>
    <label>Source Environment</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>Deployments (Source)</relationshipLabel>
    <relationshipName>Deployments_Source</relationshipName>
    <type>Lookup</type>
</CustomField>